# Xirang

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __pnpm___npm___bash___.md  one_minute_install.sh  pyproject.toml
.github/workflows/: smoke.yml
benchmarks/: run_bench.py
docs/: GITHUB_RELEASE_BODY_0.2.0a1.md  GITHUB_RELEASE_READINESS.md  GITHUB_UPLOAD_RUNBOOK.md  PUBLISHING.md  RELEASE_NOTES_0.2.0a1.md
examples/: desktop-copilot.md  persona-family.md
scripts/: bootstrap_catalogs.py  github_publish_alpha.sh  merge_contributions.py  merge_genome_proposals.py
tests/: test_smoke.py
xirang/: __init__.py  __main__.py  agent.py  audit.py  automation.py  benchmark.py  browser.py  bundle.py  catalog.py  cli.py  config.py  copilot.py  desktop.py  llm.py  memory.py  permissions.py  persona.py  pricing.py  recipe.py  session.py  setup.py  skilllet.py  tools.py  ui.py
